--- a/TwoDirectionalScroller/Base.lproj/Main.storyboard
+++ b/TwoDirectionalScroller/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="109" height="134.5"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mwh-65-WbZ">
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mwh-65-WbZ">
                                                                         <rect key="frame" x="0.0" y="0.0" width="109" height="134.5"/>
                                                                     </imageView>
                                                                 </subviews>
