--- a/TwoDirectionalScroller/Base.lproj/Main.storyboard
+++ b/TwoDirectionalScroller/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kg5-hN-dlv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kg5-hN-dlv">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--Videos-->
@@ -47,18 +47,27 @@
                                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mwh-65-WbZ">
                                                                         <rect key="frame" x="0.0" y="0.0" width="109" height="134.5"/>
                                                                     </imageView>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbZ-0c-3Xv">
+                                                                        <rect key="frame" x="33" y="57" width="42" height="21"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                             </view>
                                                             <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstItem="mwh-65-WbZ" firstAttribute="top" secondItem="IcT-bT-7wj" secondAttribute="top" id="B4G-bi-8YB"/>
+                                                                <constraint firstItem="HbZ-0c-3Xv" firstAttribute="centerY" secondItem="IcT-bT-7wj" secondAttribute="centerY" id="DZ4-fk-Lz5"/>
                                                                 <constraint firstItem="mwh-65-WbZ" firstAttribute="leading" secondItem="IcT-bT-7wj" secondAttribute="leading" id="Qxe-3L-S2h"/>
                                                                 <constraint firstAttribute="bottom" secondItem="mwh-65-WbZ" secondAttribute="bottom" id="Raa-f0-GC2"/>
                                                                 <constraint firstAttribute="trailing" secondItem="mwh-65-WbZ" secondAttribute="trailing" id="oEy-u6-Mc0"/>
+                                                                <constraint firstItem="HbZ-0c-3Xv" firstAttribute="centerX" secondItem="IcT-bT-7wj" secondAttribute="centerX" id="wcN-qV-5bt"/>
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="imageView" destination="mwh-65-WbZ" id="HZH-sR-eqL"/>
+                                                                <outlet property="placeholderLabel" destination="HbZ-0c-3Xv" id="jB9-0f-157"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
