--- a/TwoDirectionalScroller/Base.lproj/Main.storyboard
+++ b/TwoDirectionalScroller/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kg5-hN-dlv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="kg5-hN-dlv">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Videos-->
@@ -59,6 +59,7 @@
                                                             </constraints>
                                                             <connections>
                                                                 <outlet property="imageView" destination="mwh-65-WbZ" id="HZH-sR-eqL"/>
+                                                                <segue destination="wTP-H3-wme" kind="show" id="HUc-1s-f7U"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
@@ -99,6 +100,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1117" y="372"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Q6D-fJ-FOJ">
+            <objects>
+                <viewController id="wTP-H3-wme" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="hfQ-cE-Oiq"/>
+                        <viewControllerLayoutGuide type="bottom" id="pqu-lz-v4p"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5VI-r1-MiB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="A38-yc-V2T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1823" y="372"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="1OO-bF-N90">
